2002-06-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* defaults.cc (loadpath): Warn if loadpath doesn't contain
	leading, trailing, or doubled colon.

	* pt-decl.cc (tree_static_command::eval, tree_global_command::eval):
	Call error for any non-zero value of error_state.
	* pt-select.cc (tree_if_command::eval): Likewise.
	* pt-loop.cc (tree_while_command::eval_error): Don't check error_state.
	(tree_do_until_command::eval_error): Likewise.
	(tree_simple_for_command::eval_error): Likewise.
	(tree_complex_for_command::eval_error): Likewise.
	* pt-assign.cc (tree_multi_assignment::eval_error): Likewise.
	(tree_simple_assignment::eval_error): Likewise.
	* pt-idx.cc (tree_index_expression::eval_error): Likewise.
	* pt-colon.cc (tree_colon_expression::eval_error): Likewise.
	(tree_colon_expression::rvalue): Delete rendundant error_state check.

2002-06-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-mapper.cc (MAPPER_LOOP, MAPPER_LOOP_1, MAPPER_LOOP_2): New	macros.
	(octave_mapper::apply): Use them to inline the mapper loops.

	* pt-unop.cc (tree_prefix_expression::rvalue): Ensure that the
	operand is defined for op_incr and op_decr.
	(tree_postfix_expression::rvalue): Likewise.
	From Ben Sapp <bsapp@lanl.gov>.

2002-06-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-mapper.cc (octave_mapper::apply): Exit loops on error.

2002-06-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-struct.cc (octave_struct::print_raw): Print field names with
	data types if Vstruct_levels_to_print is 0.
	(octave_struct::print_name_tag): Don't emit newline if
	Vstruct_levels_to_print is negative.
	* ov.cc (struct_levels_to_print): Allow negative values too.

2002-05-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/lsode.cc (Flsode): Also return istate and error
	message.  Only generate error if user is not at least requesting
	the istate output.

	* load-save.cc (hdf5_import_multidim, hdf5_check_attr,
	hdf5_callback_data, hdf5_read_next_data, read_hdf5_data,